src/hosts/friday/k8s/apps/stalwart/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stalwart-http
  namespace: friday
spec:
  selector:
    app: stalwart
  ports:
  - name: http
    port: 8080
    targetPort: 8080
